# claims-intelligence-v2

./: .gitignore  README.md  pyproject.toml
src/claims_intelligence/claims_intelligence_dbt/: dbt_project.yml  packages.yml  profiles.yml
src/claims_intelligence/claims_intelligence_dbt/models/gold/: dim_prescriber.sql  dim_prescriber_address.sql  fct_prescriber_claims.sql  schema.yml
src/claims_intelligence/claims_intelligence_dbt/models/silver/: part_d_silver.sql  schema.yml
src/claims_intelligence/defs/: resources.py
src/claims_intelligence/defs/assets/ingestion/: load_cms_part_d_prescriber_data.py
src/claims_intelligence/defs/transform/: defs.yaml
